Update examples of Spring